added visual improvements

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,17 @@
     <title>Cat Search App</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.26.0/slimselect.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css"
     />
     <link
+      href="https://unpkg.com/slim-select@latest/dist/slimselect.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css"
     />
     <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-    <select class="breed-select"></select>
-    <p class="loader">Loading the data, please wait</p>
+    <select id="single" class="breed-select"></select>
+    <span class="loader"></span>
     <p class="error">An error occurred. Please try refreshing the page.</p>
     <div class="cat-info">
       <img class="cat-image" src="" alt="Cat" height="200" />
@@ -26,8 +26,6 @@
         <p class="cat-temperament"></p>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.26.0/slimselect.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
     <script type="module" src="./js/app.js"></script>
   </body>
 </html>
